# Resource-Monitor

./: .gitignore  README.md  long_program.py  pyproject.toml  requirements.txt
resitor/: ResourceMonitor.py
