[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[project]
name = 'resitor'

version = '0.0.1'

description = ''

authors = [{name = 'Kevin Zhu'}, {email = 'kzhu2099@gmail.com'}]
maintainers = [{name = 'Kevin Zhu'}, {email = 'kzhu2099@gmail.com'}]

classifiers = [
    'Development Status :: 4 - Beta',

    'Environment :: Console',
    
    'Intended Audience :: Developers',
    'Intended Audience :: End Users/Desktop',

    'License :: OSI Approved :: MIT License',

    'Natural Language :: English',

    'Operating System :: OS Independent',

    'Programming Language :: Python :: 3',
]

readme = 'README.md'

license = {file = 'LICENSE'}

requires-python = '>= 3.9'

dependencies = ['']

[project.urls]
Homepage = 'https://github.com/kzhu2099/PASTE-NAME'
Issues = 'https://github.com/kzhu2099/PASTE-NAME/issues'

[tool.setuptools.package-data]
'PASTENAME.data' = ['*']

[tool.setuptools.packages.find]
include = ['PASTENAME', 'PASTENAME.*']

[tool.setuptools]
license-files = []